--- a/sass/layout/_works-section.scss
+++ b/sass/layout/_works-section.scss
@@ -19,6 +19,7 @@
 .work-heading-ul {
   display: flex;
   justify-content: center;
+  padding-bottom: 94px;
 }
 .work-heading-li {
   position: relative;
