--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -192,6 +192,7 @@
   justify-content: center;
   align-items: center;
   color: #ffffff;
+  fill: currentColor;
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -200,6 +201,11 @@
     background-color: #2196f3;
   }
 }
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: #2196f3;
+}
+
 .footer-position {
   @include mq(tablet) {
     display: flex;
@@ -213,4 +219,7 @@
     // flex-direction: column;
     align-items: baseline;
   }
+}
+.follow {
+  margin-top: 60px;
 }
