--- a/css/main.css
+++ b/css/main.css
@@ -730,14 +730,9 @@ body {
   background-color: #ffffff;
 }
 
-.about {
-  padding-top: 60px;
-}
-
 @media (min-width: 1200px) {
   .about {
     padding-top: 94px;
-    padding-bottom: 47px;
   }
 }
 
@@ -847,6 +842,8 @@ body {
 @media (min-width: 1200px) {
   .works-section {
     display: flex;
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -865,7 +862,6 @@ body {
 .work-heading-ul {
   display: flex;
   justify-content: center;
-  padding-bottom: 94px;
 }
 
 .work-heading-li {
@@ -907,13 +903,13 @@ body {
 
 @media (min-width: 768px) {
   .team {
-    margin-bottom: 60px;
+    padding-bottom: 94px;
   }
 }
 
 @media (min-width: 1200px) {
   .team {
-    margin-bottom: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -925,12 +921,6 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
-  padding-top: 60px;
-}
-
-.team-list {
-  padding-bottom: 60px;
-  margin: bottom -30px;
 }
 
 @media (min-width: 768px) {
@@ -941,7 +931,7 @@ body {
 }
 
 .team-list__item {
-  margin-bottom: 30px;
+  margin-right: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
@@ -949,14 +939,12 @@ body {
 @media (min-width: 768px) {
   .team-list__item {
     width: calc(100% / 2 - 30px);
-    margin-left: 30px;
   }
 }
 
 @media (min-width: 1200px) {
   .team-list__item {
     width: calc(100% / 4 - 30px);
-    margin-left: 30px;
   }
 }
 
@@ -1051,6 +1039,20 @@ body {
   padding: 20px 24px;
 }
 
+@media (max-width: 767.98px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .clients__title {
   font-style: normal;
   font-weight: 700;
@@ -1069,7 +1071,6 @@ body {
 @media (min-width: 1200px) {
   .clients-list {
     flex-wrap: nowrap;
-    margin-bottom: 60px;
   }
 }
 
@@ -1082,7 +1083,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
+  width: 100%;
   height: 92px;
   border: 1px solid #afb1b8;
   box-sizing: border-box;
@@ -1396,10 +1397,6 @@ body {
   }
 }
 
-.follow {
-  margin-top: 60px;
-}
-
 .basic-section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -1489,7 +1486,6 @@ body {
 
 .card-content {
   flex-grow: 1;
-  margin-top: 20px;
 }
 
 .card-thumb {
@@ -1508,7 +1504,6 @@ body {
   .work-list {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 10px;
   }
 }
 
@@ -1526,13 +1521,11 @@ body {
   font-size: 16px;
   line-height: 1.872;
   letter-spacing: 0.03em;
-  margin-bottom: 20px;
 }
 
 .work-list .work-list__item {
   margin-right: 30px;
   margin-bottom: 30px;
-  margin: 15px;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
   border-radius: 0px 0px 4px 4px;
