--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,3 +1,13 @@
+.section {
+  @include mq(mobile-only) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  @include mq(desktop) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 .clients__title {
   font-style: normal;
   font-weight: 700;
@@ -12,7 +22,6 @@
   flex-wrap: wrap;
   @include mq(desktop) {
     flex-wrap: nowrap;
-    margin-bottom: 60px;
   }
   &__icon {
     fill: #afb1b8;
@@ -22,7 +31,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
+    width: 100%;
+
     height: 92px;
     border: 1px solid #afb1b8;
     box-sizing: border-box;
