--- a/sass/layout/_command-section.scss
+++ b/sass/layout/_command-section.scss
@@ -1,10 +1,10 @@
 .team {
   background-color: #f5f4fa;
   @include mq(tablet) {
-    margin-bottom: 60px;
+    padding-bottom: 94px;
   }
   @include mq(desktop) {
-    margin-bottom: 94px;
+    padding-bottom: 94px;
   }
 }
 .team__title {
@@ -15,30 +15,25 @@
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
-  padding-top: 60px;
 }
 .team-list {
-  padding-bottom: 60px;
-  margin: bottom -30px;
   @include mq(tablet) {
     display: flex;
     flex-wrap: wrap;
-    // margin-right: -30px;
   }
 }
 .team-list__item {
-  margin-bottom: 30px;
+  margin-right: 30px;
+
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
   @include mq(tablet) {
     width: calc(100% / 2 - 30px);
-    margin-left: 30px;
   }
   @include mq(desktop) {
     width: calc(100% / 4 - 30px);
-    margin-left: 30px;
   }
 }
 
