--- a/css/main.css
+++ b/css/main.css
@@ -730,6 +730,10 @@ body {
   background-color: #ffffff;
 }
 
+.about {
+  padding-top: 60px;
+}
+
 @media (min-width: 1200px) {
   .about {
     padding-top: 94px;
@@ -898,6 +902,7 @@ body {
 }
 
 .team {
+  padding-top: 60px;
   background-color: #f5f4fa;
 }
 
@@ -923,6 +928,12 @@ body {
   margin-bottom: 50px;
 }
 
+@media (max-width: 1199.98px) {
+  .team-list {
+    margin: -15px;
+  }
+}
+
 @media (min-width: 768px) {
   .team-list {
     display: flex;
@@ -931,9 +942,14 @@ body {
 }
 
 .team-list__item {
-  margin-right: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+@media (max-width: 1199.98px) {
+  .team-list__item {
+    margin: 15px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -945,6 +961,7 @@ body {
 @media (min-width: 1200px) {
   .team-list__item {
     width: calc(100% / 4 - 30px);
+    margin-right: 30px;
   }
 }
 
@@ -1039,11 +1056,9 @@ body {
   padding: 20px 24px;
 }
 
-@media (max-width: 767.98px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media (min-width: 1200px) {
