--- a/sass/layout/_command-section.scss
+++ b/sass/layout/_command-section.scss
@@ -1,4 +1,5 @@
 .team {
+  padding-top: 60px;
   background-color: #f5f4fa;
   @include mq(tablet) {
     padding-bottom: 94px;
@@ -17,23 +18,29 @@
   margin-bottom: 50px;
 }
 .team-list {
+  @include mq(not-desktop) {
+    margin: -15px;
+  }
+
   @include mq(tablet) {
     display: flex;
     flex-wrap: wrap;
   }
 }
 .team-list__item {
-  margin-right: 30px;
-
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
+  @include mq(not-desktop) {
+    margin: 15px;
+  }
   @include mq(tablet) {
     width: calc(100% / 2 - 30px);
   }
   @include mq(desktop) {
     width: calc(100% / 4 - 30px);
+    margin-right: 30px;
   }
 }
 
